@@ -1,6 +1,13 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
+DIST raspberrypi-firmware-6cc27e02d-bootcode.bin 17900 SHA256 6149c038b67e22c826bcdc28a7b59b91bded089eddf506c25df96af88e7846f4 SHA512 d27a9fc1e8878fe1d0d6324dfb2a3284e1c122722fffb39fb45723fb0d53cde7bd083044c4bac8cd8d7070f9f6482372604ed47166dc57b8c42c3148ebced8e4 WHIRLPOOL 814117482050b646d89a2fde78bb2568f7d933b0eb11e34189691b6e6d4e3ea2b9cad41ae58e65cde6ed04bc33d64e02b66989bfb042305d3c003fe07f6e9fa5
+DIST raspberrypi-firmware-6cc27e02d-fixup.dat 6161 SHA256 32e8e902eb7dbef6f1257a020fbd50f0dc811bda6bc62108609ecc903cdf28c8 SHA512 c350ffc24ee3b294a6e18b13f6c79c5f168a782afb99a00e6a13337e66d2d73d511b202918411909015bf7483e8652626191e985cd5446b692e47a9499c73028 WHIRLPOOL 4979a7eb8178d7c237a2651e94151b597fbaeebe4cf468989473867d20ac88ee380b17fd976274332a9d0b0db40afb8f64f6b93216ed6e06cc34de9048760767
+DIST raspberrypi-firmware-6cc27e02d-fixup_cd.dat 2366 SHA256 ce1c52f658a1bfc34c859f33d2775c749228d55008c386f331fa441fe17603fb SHA512 ec533cd41207de52e82fcd4a9298c50b15794eab97223b4f75c028c5bfa359f32f946df136cacc01a15d0d09df2ae013ccaf07094ef62473a18c2d7889e4aaf0 WHIRLPOOL 76d6a287ea70f3d07526a69ee3ca3a559354cdb9215df65a4a97f45eafffa45954b115f8924fdd229f4c76af617053c83dc21f6af077a7724ae3c24b71310b68
+DIST raspberrypi-firmware-6cc27e02d-fixup_x.dat 9214 SHA256 7c81b6dc6e22333c8bf8da2b1c5ccc5bf487a917661b222a02c6da9579447d23 SHA512 5cb0326e9d46bd95a50f7ff8cdd5899a142bf4d3097e8e5c13ca2951c3fb2579c8eb46aee2bebd4838f1eee1941aa005f799a08fc04fac716567a72e5b90586a WHIRLPOOL c7a197e914c316799c24e1e8bc5e4193ae7abc1acafc2022c5c7dd6a485c8b7fe0a4676eb622640cde1726358c32691d13026f39f736e34632bb1fb8ab51b45b
+DIST raspberrypi-firmware-6cc27e02d-start.elf 2664088 SHA256 130017bb746827187ed642e0cadf2b86cbce75a686c2877b17021bc7a791e60d SHA512 ba59e35bc015f1de733f0bfe41af928ffd59e5bb6710714997e0dab3a52ab8c7a69a7192cb782d0f0e0aa09d2aeac062b9581859553c329cea43b63e7d12d3a3 WHIRLPOOL b16e32d8ecd7f7be2066d9e0312f98183cd106ed2082e723e3d66399a6a0abccb08a8ef4eff68328882fb64841251d1631be4331110ee338173f204bda8d0843
+DIST raspberrypi-firmware-6cc27e02d-start_cd.elf 567672 SHA256 05a52cd9bc6896c235cfaeed7a4608a8e29edc5c6a26c577e396cf1f8c9ac14e SHA512 3478fd1dc4f51c215c32d14efc3f9e8a088c146d6d8604f2a00e8ee8d13e591c8ce0cebbf26e6927941919d2445b79e8cdca8a28fd7f46a168a5aa67fe770ffd WHIRLPOOL e67a260de38f7cd5669779a64ed8032bbdb655cc11feb5c16b190ae02a665f6ba9b08d72590e7d23804caa9dcd1ab2e130bc901f22700de56b18f76cb71ddb74
+DIST raspberrypi-firmware-6cc27e02d-start_x.elf 3621768 SHA256 623baf0b7d5fe29f650f8b408bb2f20ec77b58d063edcff7883bf48caf1e9753 SHA512 b8903a2f40ead50c88005708cd53a1391d47cfca2232ed5a08770f80e066aa85d784c7aca3bf5edefe07bbfd07da93622ca072547d30defc59cae58efd0985df WHIRLPOOL 13345653f3351dcc3b8b92894db2b62ff93e77d94a251b3ec30dce181be62c8f37abc4a6c38124a5cf946a40cf2ffb5673deb0f198bafaf617b0df354451acb0
 DIST raspberrypi-firmware-ffda51ebff-bootcode.bin 17864 SHA256 18e58724814b0b8abb75b245b35aac14867f717d221a8fb5582d176586722a30 SHA512 e45f8b4588f54bb6ac99eb395e73681f88b5c8869d5d22bc14b09db8ca1ffe93a8d4c5da87700ce05fdc35d8e77ace48580dcce23f9b53d5973315796f42ba8a WHIRLPOOL 0e16e1d3d4fcde60087b81ff44b119109d553a61708f5c7bce1239613cd86cabf05fc3df7b474d992c8d4a4c5098293eea59c85070b2449ff4f12ea2c10b2d84
 DIST raspberrypi-firmware-ffda51ebff-fixup.dat 6154 SHA256 a7643347be21cf5fe51df3e9ab9f5ffcd026afa79f4dcbd76b376f239e33a3f5 SHA512 1664e0bdb445ac2e0848cfa2116389bf1116a510878a85e8cd206ae1eab0e45d2617802a934aff6cf9666dab9cd7fb2879a4f0e4e6ef62d7bdcde1db6317971b WHIRLPOOL 34555585c12a369478288d107cef32f262ff56b02f7f4d2f72e3d75780db4f0da9c95e5517171080fc2680437e098caeeb853887080bf08e38c7f011de4cf769
 DIST raspberrypi-firmware-ffda51ebff-fixup_cd.dat 2365 SHA256 ee58e3ab010e2f3102476b0d70ba40790ce51fec168c7fda696720f50a88a7b2 SHA512 0c329ca7b5bc1dd52d1f7e3aaba1a0e7fd8f669a1f9ef42ec7fe1429e2210a2d7a4b419231e2343bbf58cbe9b6c5f429c16ca0fd3aeec055163f83b028052675 WHIRLPOOL c11c622e9a8908e2092a2b5ca60b63b99e3de96040998005465be424f7ddf6838b9ce7297b3da461c9c40cba0f6536603bf168575625a7c4a146cbe0c4f52165
@@ -11,7 +18,7 @@ DIST raspberrypi-firmware-ffda51ebff-start_x.elf 4635752 SHA256 5435ef94dac8eb3f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlUcClEACgkQknrdDGLu8JDidQD/XP0TeWeS98MT3do4ZCM0Asbn
-txdhjdW827iM7K8dJKUA/jqG0TMqhU0fC4yRFfDltM8/7fyz6D2tTzje7Bo65PAG
-=88J3
+iF4EAREIAAYFAlU5Q8cACgkQknrdDGLu8JATUwD9HbZkIJ5ANMJsfchhrFeELgii
+ck4Bfj3XJ9m+DIMAY6kA/jI9dG4sczuYOTuDBzyTdKS8O1irX1ttg7BeKZz3yTLm
+=3uY4
 -----END PGP SIGNATURE-----
