@@ -1,0 +1,62 @@
+# Copyright 1999-2015 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/sys-boot/raspberrypi-firmware/raspberrypi-firmware-1_pre20130807.ebuild,v 1.1 2013/08/15 18:21:47 xmw Exp $
+
+EAPI=5
+
+inherit readme.gentoo
+
+DESCRIPTION="Raspberry PI boot loader and firmware"
+HOMEPAGE="https://github.com/raspberrypi/firmware"
+MY_COMMIT="6cc27e02d"
+SRC_URI=""
+for my_src_uri in bootcode.bin fixup{,_cd,_x}.dat start{,_cd,_x}.elf ; do
+	SRC_URI="${SRC_URI} https://github.com/raspberrypi/firmware/raw/${MY_COMMIT}/boot/${my_src_uri} -> ${PN}-${MY_COMMIT}-${my_src_uri}"
+done
+
+LICENSE="GPL-2 raspberrypi-videocore-bin"
+SLOT="0"
+KEYWORDS="~arm -*"
+IUSE=""
+
+DEPEND=""
+RDEPEND="!sys-boot/raspberrypi-loader"
+
+S=${WORKDIR}
+
+RESTRICT="binchecks strip"
+
+src_unpack() { :; }
+
+pkg_preinst() {
+	if [ -z "${REPLACING_VERSIONS}" ] ; then
+		local msg=""
+		if [ -e "${D}"/boot/cmdline.txt -a -e "${ROOT}"/boot/cmdline.txt ] ; then
+			msg+="/boot/cmdline.txt "
+		fi
+		if [ -e "${D}"/boot/config.txt -a -e "${ROOT}"/boot/config.txt ] ; then
+			msg+="/boot/config.txt "
+		fi
+		if [ -n "${msg}" ] ; then
+			msg="This package installs following files: ${msg}."
+			msg="${msg} Please remove(backup) your copies during install"
+			msg="${msg} and merge settings afterwards."
+			msg="${msg} Further updates will be CONFIG_PROTECTed."
+			die "${msg}"
+		fi
+	fi
+}
+
+src_install() {
+	insinto /boot
+	local a
+	for a in ${A} ; do
+		newins "${DISTDIR}"/${a} ${a#${PN}-${MY_COMMIT}-}
+	done
+	newins "${FILESDIR}"/${PN}-0_p20130711-config.txt config.txt
+	newins "${FILESDIR}"/${PN}-0_p20130711-cmdline.txt cmdline.txt
+	newenvd "${FILESDIR}"/${PN}-0_p20130711-envd 90${PN}
+	readme.gentoo_create_doc
+}
+
+DOC_CONTENTS="Please configure your ram setup by editing /boot/config.txt"
